[package]
name = "cryptic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
ethers = "1.0.2"
serde_json = "1.0.93"
ethers-core = "1.0.2"
ethers-contract = "1.0.2"
ethers-providers = "1.0.2"
ethers-signers = "1.0.2"
ethers-middleware = "1.0.2"